name: reduction
version: 0.1
synopsis: Flexible reduction
homepage: https://github.com/nikita-volkov/reduction
bug-reports: https://github.com/nikita-volkov/reduction/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2019 Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/nikita-volkov/reduction.git

library
  hs-source-dirs: library
  default-extensions: BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    Reduction
  other-modules:
    Reduction.Prelude
    Reduction.String
  build-depends:
    attoparsec >=0.13 && <0.14,
    base >=4.9 && <5,
    bytestring >=0.10.10 && <0.11,
    comonad >=5 && <6,
    hashable >=1.3 && <2,
    profunctors >=5 && <6,
    selective >=0.3 && <0.4,
    semigroupoids >=5 && <6,
    text >=1 && <2,
    unordered-containers >=0.2.10 && <0.3,
    vector >=0.12 && <0.13

benchmark benchmark
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is: Main.hs
  default-extensions: Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  ghc-options: -O2 -threaded "-with-rtsopts=-N" -rtsopts -funbox-strict-fields
  build-depends:
    criterion >=1.5 && <2,
    foldl >=1.4 && <2,
    reduction,
    rerebase >=1.4 && <2
